test/fail/bad_right_brace.ly
<@lily list[integer] a    a = [10]] @>
